<resources>
    <string name="app_name">HarfanMola</string>
    <string name="logo_splash">logo_splash</string>
    <string name="sign_up">Sign up</string>
    <string name="already_have_an_account_sign_in">Already have an account? <b>SIGN IN</b></string>
    <string name="sign_up_text">SIGN UP WITH EMAIL\nPHONE NUMBER</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">name@example.com</string>
    <string name="password">Enter Password</string>
    <string name="re_password">Re-enter Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="phone_number_or_email">Phone number or Email</string>
    <string name="login_head">Log in with Email\nor Phone Number</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="log_in_with">Log in With</string>
</resources>
