<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity"
    android:background="@drawable/bg_splash">


    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/logo_splash"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:contentDescription="@string/logo_splash" />

    <Button
        android:id="@+id/btn_sign_up"
        android:layout_below="@id/img_logo"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/black_btn_bg"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        android:onClick="onClick"/>

    <TextView
        android:id="@+id/tv_sign_in"
        android:layout_below="@id/btn_sign_up"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:text="@string/already_have_an_account_sign_in"
        android:gravity="center"
        android:onClick="onClick"/>


</RelativeLayout>